--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
-    "eslint": "^8.26.0"
+    "eslint": "^8.26.0",
+    "typescipt": "^1.0.0"
   }
 }
