--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,10 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
-    "sweetalert2": "^11.6.2",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -48,11 +43,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
-    "eslint": "^8.26.0",
-    "typescipt": "^1.0.0"
+    "eslint": "^8.26.0"
   }
 }
