--- a/api/package.json
+++ b/api/package.json
@@ -12,11 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-jwt": "^7.7.7",
     "express-oauth2-jwt-bearer": "^1.1.0",
+    "jwks-rsa": "^2.1.5",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "sequelize": "^6.23.2"
