--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
+    "@types/mercadopago": "^1.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.7.23",
     "concurrently": "^7.4.0",
