--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@cloudinary/react": "^1.5.0",
     "@emailjs/browser": "^3.9.0",
     "@reduxjs/toolkit": "^1.8.6",
+    "@stripe/react-stripe-js": "^1.14.2",
+    "@stripe/stripe-js": "^1.42.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
