--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.14.2",
+    "@stripe/stripe-js": "^1.42.1",
+    "@types/cors": "^2.8.12",
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.32.0",
@@ -25,7 +28,8 @@
     "mercadopago": "^1.5.14",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
-    "sequelize": "^6.23.2"
+    "sequelize": "^6.23.2",
+    "stripe": "^10.17.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
