--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,6 @@
     "@stripe/stripe-js": "^1.42.1",
     "@types/cors": "^2.8.12",
     "axios": "^1.1.3",
-    "bcrypt": "^5.1.0",
     "cloudinary": "^1.32.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -24,6 +23,7 @@
     "express": "^4.18.2",
     "express-jwt": "^7.7.7",
     "express-oauth2-jwt-bearer": "^1.1.0",
+    "express-openid-connect": "^2.9.0",
     "jwks-rsa": "^2.1.5",
     "mercadopago": "^1.5.14",
     "morgan": "^1.10.0",
