--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.1.3",
     "cloudinary-react": "^1.8.1",
     "emailjs-com": "^3.2.0",
+    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
